--- a/Proyecto1/frontPag/Principal/index.html
+++ b/Proyecto1/frontPag/Principal/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Escuela</title>
+
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
+<header>
+    <nav>
+    </nav>
+</header>
+
+<main>
+
+</main>
+
+<footer>
+</footer>
 
 </body>
 </html>
